# hyper-relation

./: TODO.org  design.org  hyper-relation.cabal  stack.yaml
src/Data/: HRL.hs  HyperRelation.hs
src/Data/HyperRelation/Internal/: IndexMapping.hs  Proxy.hs  Relation.hs  ToRelation.hs
test/Data/: HyperRelation.hs
test/Data/HyperRelation/Internal/: IndexMappingSpec.hs
