name:                hyper-relation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/meditans/hyper-relation#readme
license:             BSD3
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2015 Carlo Nucera
category:            tutorial
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Data.HyperRelation
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

executable hyper-relation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hyper-relation
  default-language:    Haskell2010

test-suite hyper-relation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hyper-relation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meditans/hyper-relation
