name:                hyper-relation
version:             0.0.0.2
synopsis:            Search fastly in a group of relations
description:         Please see README.md
homepage:            http://github.com/meditans/hyper-relation#readme
license:             BSD3
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2015 Carlo Nucera
category:            Data Structures
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.HyperRelation
  other-modules:       Data.HyperRelation.Internal.Relation
                       Data.HyperRelation.Internal.Proxy
  build-depends:       base >= 4.7 && < 5
                     , hashable >= 1.2.3.3
                     , unordered-containers >= 0.2.5.1
                     , hspec >= 2.1.10
                     , QuickCheck >= 2.8.1
                     , quickcheck-property-monad
                     , containers
  default-language:    Haskell2010

test-suite hyper-relation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hyper-relation
                     , hashable
                     , unordered-containers >= 0.2.5.1
                     , hspec >= 2.1.10
                     , QuickCheck >= 2.8.1
                     , quickcheck-property-monad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meditans/hyper-relation
